@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,27 +21,32 @@
  * questions.
  */
 
-package gc.g1;
-
 /*
- * @test TestNoUseHCC
- * @summary Check that G1 survives a GC without HCC enabled
- * @requires vm.gc.G1
+ * @test
+ * @summary Stack guard pages should be installed correctly and removed when thread is detached for native threads
  * @modules java.base/jdk.internal.misc
  * @library /test/lib
- * @build jdk.test.whitebox.WhiteBox
- * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
- * @run main/othervm -Xbootclasspath/a:. -Xlog:gc+phases=debug -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UseG1GC -Xmx64M -XX:G1ConcRSLogCacheSize=0 gc.g1.TestNoUseHCC
+ * @requires os.family == "linux"
+ * @compile DoOverflow.java
+ * @run main/native TestStackGuardPagesNative
  */
+import jdk.test.lib.Utils;
+import jdk.test.lib.process.ProcessTools;
+import jdk.test.lib.process.OutputAnalyzer;
 
-import jdk.test.whitebox.WhiteBox;
 
-public class TestNoUseHCC {
+public class TestStackGuardPagesNative {
+    public static void main(String args[]) throws Exception {
 
-    private static final WhiteBox WB = WhiteBox.getWhiteBox();
+        ProcessBuilder pb = ProcessTools.createNativeTestProcessBuilder("invoke", "test_native_overflow");
+        pb.environment().put("CLASSPATH", Utils.TEST_CLASS_PATH);
+        OutputAnalyzer output = ProcessTools.executeProcess(pb);
+        output.shouldHaveExitValue(0);
 
-    public static void main(String [] args) {
-        WB.youngGC();
+        pb = ProcessTools.createNativeTestProcessBuilder("invoke", "test_native_overflow_initial");
+        pb.environment().put("CLASSPATH", Utils.TEST_CLASS_PATH);
+        output = ProcessTools.executeProcess(pb);
+        output.shouldHaveExitValue(0);
+
     }
 }
-
